pushing tab icons

--- a/projects.html
+++ b/projects.html
@@ -1,97 +1,113 @@
 <!DOCTYPE html>
 <html>
-  <div class="dropdown" style="float:right;">
-    <button class="dropbtn"></button>
-    <div class="dropdown-content">
-      <a href="http://joshuaverdejo.com/info">About</a>
-      <a href="http://joshuaverdejo.com/contact">Contact</a>
-      <a href="http://joshuaverdejo.com/home">Home</a>
+<div class="dropdown" style="float:right;">
+  <button class="dropbtn"></button>
+  <div class="dropdown-content">
+    <a href="http://joshuaverdejo.com/info">About</a>
+    <a href="http://joshuaverdejo.com/contact">Contact</a>
+    <a href="http://joshuaverdejo.com/home">Home</a>
+  </div>
+</div>
+
+<head>
+  <title>Projects</title>
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/home.css" />
+  <link rel="stylesheet" href="css/projects.css" />
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/drawnIcons.ico/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="assets/drawnIcons.ico/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/drawnIcons.ico/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/drawnIcons.ico/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/drawnIcons.ico/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/drawnIcons.ico/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="assets/drawnIcons.ico/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/drawnIcons.ico/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/drawnIcons.ico/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/drawnIcons.ico/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/drawnIcons.ico/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/drawnIcons.ico/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/drawnIcons.ico/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+</head>
+
+<body align="center" class="container dark-theme" style="overflow-y:auto;">
+  <h1 class="project-title">Projects</h1>
+
+
+  <div class="child a1">
+    <div class="project-overview">
+      <img class="img" src=assets/photos/devIcon.png alt='Click Here to Learn More' />
+      I believe in creating technologies that feel <strong>intuitive</strong>, creating experiences that challenge
+      users to <strong>interact with technology in different ways</strong>.
+      Scroll <strong>down</strong> to learn more about it.
     </div>
   </div>
 
-  <head>
-    <title>Projects</title>
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/home.css" />
-    <link rel="stylesheet" href="css/projects.css" />
-
-  </head>
-
-  <body align="center" class="container dark-theme" style="overflow-y:auto;">
-    <h1 class="project-title">Projects</h1>
-
-
-    <div class="child a1">
-      <div class="project-overview">
-        <img class="img" src=assets/photos/devIcon.png alt='Click Here to Learn More' />
-        I believe in creating technologies that feel <strong>intuitive</strong>, creating experiences that challenge
-        users to <strong>interact with technology in different ways</strong>.
-        Scroll <strong>down</strong> to learn more about it.
-      </div>
+  <div class="child a2">
+    <div class="project-title">Master's Project</div>
+    <div class="project-overview">
+      <a target="_blank" rel="noopener noreferrer" href="https://github.com/joverdejo/joverdejo.github.io">
+        <img class="img" src="assets/photos/hciIcon.png" alt='Click Here to Learn More' />
+      </a>
+      I created an application framework to visualize EIT information working to learn more about how users can use
+      new technological mediums to interact with technology.
     </div>
+  </div>
 
-    <div class="child a2">
-      <div class="project-title">Master's Project</div>
-      <div class="project-overview">
-        <a target="_blank" rel="noopener noreferrer" href="https://github.com/joverdejo/joverdejo.github.io">
-          <img class="img" src="assets/photos/hciIcon.png" alt='Click Here to Learn More' />
-        </a>
-        I created an application framework to visualize EIT information working to learn more about how users can use
-        new technological mediums to interact with technology.
-      </div>
+  <div class="child a3">
+    <div class="project-title">The Tavern</div>
+    <div class="project-overview">
+      <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=eRShngeHPN0">
+        <img class="img" src="assets/photos/tavernIcon.png" alt='Click Here to Learn More' />
+      </a>
+      I worked on a text based adventure creation engine called The Tavern, which won 1st place at the MIT Weblab
+      Competion, as well as a Facebook Community award!
     </div>
+  </div>
 
-    <div class="child a3">
-      <div class="project-title">The Tavern</div>
-      <div class="project-overview">
-        <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=eRShngeHPN0">
-          <img class="img" src="assets/photos/tavernIcon.png" alt='Click Here to Learn More' />
-        </a>
-        I worked on a text based adventure creation engine called The Tavern, which won 1st place at the MIT Weblab
-        Competion, as well as a Facebook Community award!
-      </div>
+  <div class="child a4">
+    <div class="project-title">LASSIE</div>
+    <div class="project-overview">
+      <a target="_blank" rel="noopener noreferrer" href="https://sites.google.com/view/lassiereport">
+        <img class="img" src="assets/photos/lassieIcon.png" alt='Click Here to Learn More' />
+      </a>
+      I built a WiFi enabled, low-cost search and rescue robot that was controllable from a website, including
+      collision detection, speakers,
+      temperature detection, and a camera.
     </div>
+  </div>
 
-    <div class="child a4">
-      <div class="project-title">LASSIE</div>
-      <div class="project-overview">
-        <a target="_blank" rel="noopener noreferrer" href="https://sites.google.com/view/lassiereport">
-          <img class="img" src="assets/photos/lassieIcon.png" alt='Click Here to Learn More' />
-        </a>
-        I built a WiFi enabled, low-cost search and rescue robot that was controllable from a website, including
-        collision detection, speakers,
-        temperature detection, and a camera.
-      </div>
+  <div class="child a5">
+    <div class="project-title">Brain Swarm Interface</div>
+    <div class="project-overview">
+      <a target="_blank" rel="noopener noreferrer"
+        href="https://www.youtube.com/playlist?list=PL8CxV3ShMq0Z34DcwOvDCD4o-epDxOfAq">
+        <img class="img" src="assets/photos/bciIcon.png" alt='Click Here to Learn More' />
+      </a>
+      I wrote a program that optimized a connection between user thoughts and controlling a robotic swarm!
     </div>
+  </div>
 
-    <div class="child a5">
-      <div class="project-title">Brain Swarm Interface</div>
-      <div class="project-overview">
-        <a target="_blank" rel="noopener noreferrer"
-          href="https://www.youtube.com/playlist?list=PL8CxV3ShMq0Z34DcwOvDCD4o-epDxOfAq">
-          <img class="img" src="assets/photos/bciIcon.png" alt='Click Here to Learn More' />
-        </a>
-        I wrote a program that optimized a connection between user thoughts and controlling a robotic swarm!
-      </div>
+
+  <div class="child a6">
+    <div class="project-title">Miscallaneous</div>
+    <div class="project-overview">
+      <a target="_blank" rel="noopener noreferrer" href="https://github.com/joverdejo/joverdejo.github.io">
+        <img class="img" src="assets/photos/devIcon.png" alt='Click Here to Learn More' />
+      </a>
+      I have worked on a number of miscallaneous projects, in web, app, and game development, as well as graphic
+      design! (Page to be updated)
     </div>
+  </div>
 
 
-    <div class="child a6">
-      <div class="project-title">Miscallaneous</div>
-      <div class="project-overview">
-        <a target="_blank" rel="noopener noreferrer" href="https://github.com/joverdejo/joverdejo.github.io">
-          <img class="img" src="assets/photos/devIcon.png" alt='Click Here to Learn More' />
-        </a>
-        I have worked on a number of miscallaneous projects, in web, app, and game development, as well as graphic
-        design! (Page to be updated)
-      </div>
-    </div>
+  <button class="theme-btn"> <span class="theme-type"></span> </button>
+  <!-- External JavaScript File -->
+  <script src="/js/main.js"></script>
 
-
-    <button class="theme-btn"> <span class="theme-type"></span> </button>
-    <!-- External JavaScript File -->
-    <script src="/js/main.js"></script>
-
-  </body>
+</body>
 
 </html>
