--- a/home.html
+++ b/home.html
@@ -1,45 +1,66 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <title>Home</title>
-    <link rel="stylesheet" href="css/main.css"/>
-    <link rel="stylesheet" href="css/home.css"/>
-  </head>
+<head>
+  <title>Home</title>
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/home.css" />
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/drawnIcons.ico/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="assets/drawnIcons.ico/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/drawnIcons.ico/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/drawnIcons.ico/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/drawnIcons.ico/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/drawnIcons.ico/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="assets/drawnIcons.ico/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/drawnIcons.ico/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/drawnIcons.ico/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/drawnIcons.ico/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/drawnIcons.ico/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/drawnIcons.ico/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/drawnIcons.ico/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+</head>
 
 <p>
- 
-  
-<body class="dark-theme">
-<h1 class = "page-text">My name is 
 
-<strong class="pop1">Josh Verdejo, 
-<img class = "info-img popimg1" src='/assets/photos/kidme.jpg' alt=''>
-<div class = "caption"> This is me (as a kid)</div></strong> I am a 
-      
-<strong class="pop2">student at MIT
-<img class = "info-img popimg2" src='/assets/photos/mitacceptance.gif' alt=''>
-<div class = "caption"> Me getting accepted</div></strong> pursuing 
-      
-<strong class="pop3">Computer Science and Electrical Engineering 
 
-<img class = "info-img popimg3" src='/assets/photos/me.png' alt=''> 
-  <div class = "caption"> This is me (now)</div></strong> degrees.</h1>
+  <body class="dark-theme">
+    <h1 class="page-text">My name is
+
+      <strong class="pop1">Josh Verdejo,
+        <img class="info-img popimg1" src='/assets/photos/kidme.jpg' alt=''>
+        <div class="caption"> This is me (as a kid)</div>
+      </strong> I am a
+
+      <strong class="pop2">student at MIT
+        <img class="info-img popimg2" src='/assets/photos/mitacceptance.gif' alt=''>
+        <div class="caption"> Me getting accepted</div>
+      </strong> pursuing
+
+      <strong class="pop3">Computer Science and Electrical Engineering
+
+        <img class="info-img popimg3" src='/assets/photos/me.png' alt=''>
+        <div class="caption"> This is me (now)</div>
+      </strong> degrees.</h1>
 </p>
-  
+
 <div class="dropdown" style="float:right;">
   <button class="dropbtn"></button>
   <div class="dropdown-content">
-<a href="http://joshuaverdejo.com/info">About</a>
-<a href="http://joshuaverdejo.com/projects">Projects</a>
-<a href="http://joshuaverdejo.com/contact">Contact</a>
+    <a href="http://joshuaverdejo.com/info">About</a>
+    <a href="http://joshuaverdejo.com/projects">Projects</a>
+    <a href="http://joshuaverdejo.com/contact">Contact</a>
   </div>
-</div>  
-   
-  
+</div>
+
+
 <button class="theme-btn"> <span class="theme-type"></span> </button>
 
-    <!-- External JavaScript File -->
-    <script src="/js/main.js"></script>
+<!-- External JavaScript File -->
+<script src="/js/main.js"></script>
 </body>
+
 </html>
