--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
   <div class="child a2">
     <div class="project-title">Master's Project</div>
     <div class="project-overview">
-      <a target="_blank" rel="noopener noreferrer" href="https://github.com/joverdejo/joverdejo.github.io">
+      <a target="_blank" rel="noopener noreferrer" href="https://drive.google.com/file/d/1SxXO7TFov3hMiZBi-_CBLH-jlDH8yJtR/view?usp=sharing">
         <img class="img" src="assets/photos/hciIcon.png" alt='Click Here to Learn More' />
       </a>
       I created an application framework to visualize EIT information working to learn more about how users can use
