--- a/home.html
+++ b/home.html
@@ -33,18 +33,31 @@
       <strong class="pop1">Josh Verdejo,
         <img class="info-img popimg1" src='/assets/photos/kidme.jpg' alt=''>
         <div class="caption"> This is me (as a kid)</div>
-      </strong> I am a
+      </strong> I am an
 
-      <strong class="pop2">student at MIT
+      <strong class="pop2">MIT Graduate
         <img class="info-img popimg2" src='/assets/photos/mitacceptance.gif' alt=''>
         <div class="caption"> Me getting accepted</div>
-      </strong> pursuing
+      </strong> with a Bachelor's and Master's in
 
       <strong class="pop3">Computer Science and Electrical Engineering
 
         <img class="info-img popimg3" src='/assets/photos/me.png' alt=''>
         <div class="caption"> This is me (now)</div>
-      </strong> degrees.</h1>
+
+      </strong> I currently work as an Associate Product Manager at
+      <div class="pop4 google"><strong class="G">G<strong class="o">o<strong class="o2">o<strong class="g">g<strong
+                  class="l">l<strong class="e">e
+                    <img class="info-img popimg4" src='/assets/photos/ytmIcon.png' alt=''>
+                    <div class="caption"> I work for YouTube Music!</div>
+                  </strong></strong>
+              </strong>
+            </strong>
+          </strong>
+        </strong></div>
+
+
+    </h1>
 </p>
 
 <div class="dropdown" style="float:right;">
