updated project page

--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,9 @@
 
   <div class="child a1">
     <div class="project-overview">
-      <img class="img" src=assets/photos/devIcon.png alt='Click Here to Learn More' />
+      <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+      <img class="img" src=assets/photos/infoIcon.png alt='Click Here to Learn More' />
+    </a>
       I believe in creating technologies that feel <strong>intuitive</strong>, creating experiences that challenge
       users to <strong>interact with technology in different ways</strong>.
       Scroll <strong>down</strong> to learn more about it.
